# Backend

./: AUTHENTICATION.md  Cargo.toml  README.md  schema.sql
migrations/2024-02-27-030730_create_schemas/: up.sql
src/: authentication.rs  main.rs  risk.rs  schema.rs
src/auth/: forget.rs  login.rs  signup.rs  user_center.rs  validation.rs
src/db_lib/: database.rs  mod.rs  models.rs  query.rs  schema.rs
src/order/: bbgo.rs  route.rs
src/portfolio/: change_portfolio.rs  create_portfolio.rs  get_portfolio.rs  remove_portfolio.rs
templates/: forgotpassword.html  login.html  resetpassword.html  signup.html  verification.html
test/: change_portfolio.py  config.py  create_portfolio.py  login.py  order.py  remove_portfolio.py  risk.py  signup.py
