
[package]
name = "rudrist_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2", features = ["postgres", "chrono"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
rand_chacha = "0.3.1"
lettre = "0.11.2"
chrono = "0.4.31"
urlencoding = "2.1.3"
dotenv = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.4"
features = ["json", "secrets" ]
